--- a/Views/style/style.css
+++ b/Views/style/style.css
@@ -1,22 +1,10 @@
-
-body{
-background-image: url('https://www.soudfa.com/content/blog-articles/en-076.jpg');
-/* background-repeat: repeat;
-background-attachment: fixed;  
- background-size: cover; 
-background-size: 100% auto;
-height: 200px;
-width: 400px;
-
-position: fixed;
-top: 40%;
-left: 40%;
-right: 30%;
-margin-top: -100px;
-margin-left: -100px;
-color: white;  */
+body { 
+    background-image: url('https://www.soudfa.com/content/blog-articles/en-076.jpg');
+    background-repeat: repeat;
+    background-attachment: fixed;  
+    background-size: cover; 
+    background-size: 100% auto;
 }
-
 * {
     box-sizing: border-box;
 }
@@ -24,12 +12,20 @@ body {
     margin: 0;
     padding: 0;
 }
+.brand {
+    font-family: arial,Helvetica, sans-serif;
+    padding-left: 1rem;
+    font-size: 35px;
+}
 .navbar {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-right: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #333;
     color: white;
+    
 }
 
 .navbar-links ul {
@@ -46,4 +42,162 @@ body {
     color: white;
     padding: 1rem;
     display: block;
+}
+.navbar-links li:hover{
+    background-color: #555;
+}
+.navbar{
+    direction:ltr;
+}
+.body{
+    padding-top: 10rem;
+    text-align: center;
+    justify-content:baseline;
+}
+.mb-3{
+    display:flex;
+    text-align: center;
+}
+.col-auto {
+    display: inline-block;
+}
+#rep {
+    margin-left: 10px;
+    margin-top: 12px;
+    display: inline-block;
+}
+.col-12 {
+    padding-right: 25%;
+    padding-left: 25%;
+    margin-top: 17rem;
+}
+#rep a {
+    text-decoration-line: none;
+    color:aliceblue;
+}
+.rowg-3{
+    margin: 0;
+    padding: 0;
+
+    padding-top: 15%;
+    padding-left: 40%;
+    padding-right: 40%;
+}
+#a1{padding-bottom: 2px;}
+#a2{padding-bottom: 2px;}
+#a3{padding-bottom: 2px;}
+#a4{padding-bottom: 2px;}
+#a5{padding-bottom: 2px;}
+#a6{padding-bottom: 10px;}
+#btn{text-align: center;}
+
+.loginmain{
+    padding: 0;
+    margin: 0;
+    font-family: montserrat;
+    background: linear-gradient(120deg,#2980b9,#8e44ad);
+    height: 100vh;
+    overflow: hidden;
+}
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    background: white;
+    border-radius: 10px;
+}
+.center h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+}
+.center form {
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+form .txt_field {
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin: 30px 0;
+}
+.txt_field input {
+    width: 100%;
+    padding: 0 5px ;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+}
+.txt_field label {
+    position: absolute;
+    top: 50%;
+    left:5px ;
+    color: #adadad;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.txt_field span::before {
+    content: '';
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background: #2691d9;
+    transition: .5s;
+}
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+    top: -5px;
+    color: #2691d9;
+}
+
+.txt_field input:focus ~ span::before
+.txt_field input:valid ~ span::before{
+    width: 100%;
+}
+.pass {
+    margin: -5px 0 20px 5px;
+    color: #a6a6a6;
+    cursor: pointer;
+}
+.pass:hover{
+    color: #2691d9;
+    text-decoration: underline;
+    transition: .5;
+}
+input[type="submit"]{
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: #2691d9;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+input[type="submit"]:hover{
+    border-color: #2691d9;
+    transition: .5s;
+}
+.signup_link{
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+}
+.signup_link a{
+    color: #2691d9;
+    text-decoration: none;
+}
+.signup_link a:hover{
+    text-decoration: underline;
 }
