--- a/Views/style/login.css
+++ b/Views/style/login.css
@@ -38,16 +38,6 @@ form .txt_field {
     background: none;
     outline: none;
 }
-.txt_field label {
-    position: absolute;
-    top: 50%;
-    left:5px ;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: .5s;
-}
 
 .txt_field span::before {
     content: '';
@@ -79,7 +69,7 @@ form .txt_field {
     text-decoration: underline;
     transition: .5;
 }
-input[type="submit"]{
+#TT{
     width: 100%;
     height: 50px;
     border: 1px solid;
@@ -91,7 +81,7 @@ input[type="submit"]{
     cursor: pointer;
     outline: none;
 }
-input[type="submit"]:hover{
+#TT:hover{
     border-color: #2691d9;
     transition: .5s;
 }
