--- a/Views/style/signup.css
+++ b/Views/style/signup.css
@@ -84,4 +84,52 @@ form .gender-details .category{
     border-radius: 50%;
     margin-right: 10px;
     border: 5px solid transparent;
+    transition: all 0.3s ease;
+}
+#dot-1:checked~ .category label .one,
+#dot-2:checked~ .category label .two{
+    border-color: #d9d9d9;
+    background: #9b59b6;
+}
+form input[type="radio"]{
+    display: none;
+}
+
+form #btn{
+    height: 45px;
+    margin: 45px 0;
+}
+form #btn input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    color: #fff;
+    border:none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    background:linear-gradient(135deg,#71b7e6,#9b59b6);
+}
+form #btn input:hover{
+    background:linear-gradient(135deg,#71b7e6,#9b59b6);
+}
+@media(max-width:584px){
+    .container{
+        max-width: 100%;
+    }
+    form .user-details .input-box{
+        margin-bottom: 15px;
+        width: 100%;
+    }
+    form .gender-details .category{
+        width: 100%;
+    }
+    .container form .user-details{
+        max-height: 300px;
+        overflow-y:scroll;
+    }
+    .user-details::-webkit-scrollbar{
+        width: 0;
+    }
 }
