only  little changes
after login i created new login-index page with the css file for it and i added a not in the not.text don't forget to check it out <3

--- a/Views/style/navbar.css
+++ b/Views/style/navbar.css
@@ -15,7 +15,9 @@ body {
     align-items: center;
     background-color: #333;
     color: white;
-    
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .navbar-links ul {
@@ -39,3 +41,17 @@ body {
 .navbar{
     direction:ltr;
 }
+/* .navlog {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    right: 0;
+    
+}
+.navbtn {
+    position: absolute;
+    top: 50px;
+    right: 10rem;
+    
+} */
