--- a/Views/style/comment.css
+++ b/Views/style/comment.css
@@ -1,15 +1,156 @@
-.box{
+*{
+    box-sizing: border-box;
+}
+body{
+    background-image: url('https://www.soudfa.com/content/blog-articles/en-076.jpg');
+    background-repeat: repeat;
+    background-attachment: fixed;  
+    background-size: cover;
     margin: 0;
     padding: 0;
-    position: fixed;
+}
+section{
+    font-size: 20px ;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 99vh;
     justify-content: center;
     align-items: center;
-    position: relative;
-
+    display: flex;
 }
-.dis{
+.container{
+    width: 90vh;
+    height: 700px;
+    background-color: rgb(255, 255, 255);
+    background: 
+    linear-gradient(
+        purple ,
+        black 40%
+        );
+    box-shadow: 0 0 18px 0;
+    margin: 0 auto;
+    border-radius: 20px; 
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    display: flex;  
+}
+.box1{
+    border-radius: 20px;
+    top: 20px;
+    position: absolute;
+    height: 30%;
+    width: 95%;
+    background: hsl(289, 52%, 19% );
     
+}
+.box2{
+    border-radius: 20px;
+    bottom: 20px;
+    position: absolute;
+    height: 60%;
+    width: 95%;
+    background: 
+    linear-gradient(
+        purple ,
+        black 60%
+    );
+}
+.user1{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius: 5px;
+    position:absolute;
+    height: 40px;
+    width: 175px;
     background: white;
-    width: 50%;
-    height: 50%;
+    top: 30px;
+    left: 30px;
+}
+.user2{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius: 5px;
+    position:absolute;
+    height: 40px;
+    width: 175px;
+    background: white;
+    top: 270px;
+    left: 30px;
+}
+.report{
+    border-radius: 5px;
+    position:absolute;
+    height: 40px;
+    width: 175px;
+    background: white;
+    top: 30px;
+    left: 220px;
+    text-align: center;
+}
+.contant{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius: 5px;
+    position: absolute;
+    top: 82px;
+    left: 30px;
+    width: 93%;
+    height: 137px;
+    background: white;
+    text-align: center;
+}
+.comment{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    position: absolute;
+    height: 137px;
+    width: 93%;
+    background: white;
+    left: 30px;
+    top: 323px;
+    text-align: center;
+    border-radius: 5px;
+}
+.input input{
+    position: absolute;
+    width: 92.2%;
+    left: 30px;
+    height: 50px;
+    bottom: 30px;
+    border-radius: 50px;
+    text-align:center;
+}
+input{
+    position: relative;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    transition: 500ms ease;
+}
+input:hover{
+    filter: drop-shadow(0 0 0.5rem dodgerblue);
+}
+input:focus{
+    text-decoration-line: none;
+}
+.input .btn{
+    color: white;
+    position: absolute;
+    width: 55px;
+    right: 25px;
+    height: 55px;
+    bottom: 27px;
+    border-radius: 50px;
+    text-align:center;
+    background:dodgerblue; 
+    cursor: pointer;
+    transition: 500ms ease;
+}
+.btn:hover{
+    filter: drop-shadow(0 0 1rem dodgerblue);
+    transform: scale(1.1);
 }
