--- a/Views/style/style.css
+++ b/Views/style/style.css
@@ -1,6 +1,4 @@
-body { 
-    background-image: url('https://www.soudfa.com/content/blog-articles/en-076.jpg');
-    background-repeat: repeat;
-    background-attachment: fixed;  
-    background-size: cover;
+ 
+body {
+    background:linear-gradient(black,grey);
 }
